After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672853 - Assistant layout is broken
Assistant layout is broken
Status: RESOLVED FIXED
Product: gnome-boxes
Classification: Applications
Component: general
3.4.x (unsupported)
Other Linux
: Urgent blocker
: --
Assigned To: GNOME Boxes maintainer(s)
GNOME Boxes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-03-26 14:03 UTC by Cosimo Cecchi
Modified: 2016-03-31 14:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (337.44 KB, image/png)
2012-03-26 14:03 UTC, Cosimo Cecchi
  Details
table-layout: Fix [xy]_expand (1.49 KB, patch)
2012-03-28 07:36 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review
layout: fix broken Wizard and Properties layout (1.30 KB, patch)
2012-03-29 02:31 UTC, Marc-Andre Lureau
committed Details | Review

Description Cosimo Cecchi 2012-03-26 14:03:43 UTC
See attached screenshot; gnome-boxes 3.3.92 on Fedora 17.
Comment 1 Cosimo Cecchi 2012-03-26 14:03:55 UTC
Created attachment 210622 [details]
screenshot
Comment 2 Christophe Fergeau 2012-03-26 14:13:58 UTC
Ah interesting, I saw something similar when running with the French translation, but not with LC_ALL=C. No other clue though.
Comment 3 Christophe Fergeau 2012-03-27 09:28:45 UTC
Getting this with LC_ALL=C now and 3.4.0 from jhbuild
Comment 4 Emmanuele Bassi (:ebassi) 2012-03-28 07:31:16 UTC
it probably has something to do with bug 672557: the code in TableLayout has been resynchronised with MxTable (from which it came originally) to incorporate fixes that happened during the last year or so - and it may have broken something.

I'll look at it ASAP.

in the meantime, reassigning the bug to Clutter.
Comment 5 Emmanuele Bassi (:ebassi) 2012-03-28 07:36:34 UTC
Created attachment 210759 [details] [review]
table-layout: Fix [xy]_expand

trivial fix. testing appreciated.
Comment 6 Christophe Fergeau 2012-03-28 08:30:14 UTC
Unfortunately this doesn't seem to help. I applied the patch, rebuilt/reinstalled clutter, checked that the libclutter.so gnome-boxes is using changed on disk, but I still get a broken layout in the assistant
Comment 7 Christophe Fergeau 2012-03-28 08:49:37 UTC
I went back to 229241b87 actor: Remove the implicit easing state save (randomly chosen rev from some time ago) and I'm still getting this issue, so I'm not sure clutter is to blame there.
Comment 8 Jasper St. Pierre (not reading bugmail) 2012-03-28 09:02:31 UTC
Review of attachment 210759 [details] [review]:

Whoops, yeah.
Comment 9 Emmanuele Bassi (:ebassi) 2012-03-28 11:03:28 UTC
Comment on attachment 210759 [details] [review]
table-layout: Fix [xy]_expand

Attachment 210759 [details] pushed as 3c1358d - table-layout: Fix [xy]_expand
Comment 10 Emmanuele Bassi (:ebassi) 2012-03-28 11:08:02 UTC
it would be fantastic if you could bisect Clutter to find the commit that broke - though I'm pretty sure that TableLayout hasn't been touched in a while, except the latest few commits. the latest changes were in January, and they were compiler warning fixes.
Comment 11 Emmanuele Bassi (:ebassi) 2012-03-28 11:32:26 UTC
re-assigning to Boxes, as per comment 7 and discussion on IRC.
Comment 12 Zeeshan Ali 2012-03-28 22:11:26 UTC
We really need to fix this ASAP. While this issue is not 'blocker' in the wizard, properties view is totally unusable because of this.
Comment 13 Marc-Andre Lureau 2012-03-29 02:31:17 UTC
Created attachment 210836 [details] [review]
layout: fix broken Wizard and Properties layout

A recent change in clutter has introduced a regression in Boxes:
8c0be4181bc48917535177b3ce61f87d78f0c27d

It seems to use the first column/row expand value for the rest of the
table cells. Further investigation needed with Clutter gang.

For now, let's just remove expand from the topbar, which spans over 2
cells.
Comment 14 Emmanuele Bassi (:ebassi) 2012-03-29 08:48:30 UTC
the rationale for the change in Clutter would be that if a widget is set to expand and is spanning more than one column, then all the columns covered should be expanding, to match the request of the actor.

we can probably figure out a way to amend the policy, though that may require doing multiple passes on the list of actors.
Comment 15 Zeeshan Ali 2012-03-29 12:36:09 UTC
Comment on attachment 210836 [details] [review]
layout: fix broken Wizard and Properties layout

Works here and from what I understood from last comment, this is the right thing to do any ways?
Comment 16 Marc-Andre Lureau 2012-03-29 12:56:25 UTC
Attachment 210836 [details] pushed as 0f09465 - layout: fix broken Wizard and Properties layout
Comment 17 Zeeshan Ali 2012-04-03 22:39:28 UTC
While I made sure that the fix gets into F17, I now found out that this issue is still reproducible *somehow* on F17 against Boxes 3.4.0.1 (which contains these fixes). :(
Comment 18 Zeeshan Ali 2012-04-06 03:09:48 UTC
Turns out that the attachment#210759 [details] got forgotten and didn't make it to fedora 17.
Comment 19 Christophe Fergeau 2012-04-06 08:53:41 UTC
To be honest, I only realized yesterday that this patch was also needed to fix the breakage, and I probably was not the only one. Since this patch hasn't been part of a clutter release yet, it's no surprise it's not there yet. Have you filed a bug against the fedora package already?
Comment 20 Zeeshan Ali 2012-04-06 12:50:05 UTC
(In reply to comment #19)
> Since this patch hasn't been
> part of a clutter release yet, it's no surprise it's not there yet. Have you
> filed a bug against the fedora package already?

No, I did something better. I sent a patch against clutter fedora package to Matthias Clasen and he promised to push it ASAP.