table-layout: Fix [xy]_expand

A copy and paste thinko.

https://bugzilla.gnome.org/show_bug.cgi?id=672853